--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -171,7 +171,7 @@
              </sizepolicy>
             </property>
             <property name="placeholderText">
-             <string>Планар</string>
+             <string>Не выбран</string>
             </property>
            </widget>
           </item>
@@ -184,7 +184,7 @@
              </sizepolicy>
             </property>
             <property name="placeholderText">
-             <string>Keithley</string>
+             <string>Не выбран</string>
             </property>
            </widget>
           </item>
@@ -197,7 +197,7 @@
              </sizepolicy>
             </property>
             <property name="placeholderText">
-             <string>Диод</string>
+             <string>Не выбран</string>
             </property>
            </widget>
           </item>
