--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1200</width>
-    <height>779</height>
+    <height>871</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -439,7 +439,17 @@
               </widget>
              </item>
              <item row="0" column="1">
-              <widget class="QSpinBox" name="zeroSpinBox"/>
+              <widget class="QSpinBox" name="zeroSpinBox">
+               <property name="maximum">
+                <number>5000</number>
+               </property>
+               <property name="singleStep">
+                <number>100</number>
+               </property>
+               <property name="value">
+                <number>400</number>
+               </property>
+              </widget>
              </item>
              <item row="1" column="0">
               <widget class="QLabel" name="label_32">
@@ -449,7 +459,17 @@
               </widget>
              </item>
              <item row="1" column="1">
-              <widget class="QSpinBox" name="FCSpinBox"/>
+              <widget class="QSpinBox" name="FCSpinBox">
+               <property name="maximum">
+                <number>5000</number>
+               </property>
+               <property name="singleStep">
+                <number>100</number>
+               </property>
+               <property name="value">
+                <number>300</number>
+               </property>
+              </widget>
              </item>
              <item row="2" column="0">
               <widget class="QLabel" name="label_33">
@@ -459,7 +479,17 @@
               </widget>
              </item>
              <item row="2" column="1">
-              <widget class="QSpinBox" name="DC10spinBox"/>
+              <widget class="QSpinBox" name="DC10spinBox">
+               <property name="maximum">
+                <number>5000</number>
+               </property>
+               <property name="singleStep">
+                <number>100</number>
+               </property>
+               <property name="value">
+                <number>800</number>
+               </property>
+              </widget>
              </item>
              <item row="3" column="0">
               <widget class="QLabel" name="label_34">
@@ -469,7 +499,17 @@
               </widget>
              </item>
              <item row="3" column="1">
-              <widget class="QSpinBox" name="DC1VSpinBox"/>
+              <widget class="QSpinBox" name="DC1VSpinBox">
+               <property name="maximum">
+                <number>5000</number>
+               </property>
+               <property name="singleStep">
+                <number>100</number>
+               </property>
+               <property name="value">
+                <number>600</number>
+               </property>
+              </widget>
              </item>
              <item row="4" column="0">
               <widget class="QLabel" name="label_35">
@@ -479,7 +519,17 @@
               </widget>
              </item>
              <item row="4" column="1">
-              <widget class="QSpinBox" name="lightSpinBox"/>
+              <widget class="QSpinBox" name="lightSpinBox">
+               <property name="maximum">
+                <number>5000</number>
+               </property>
+               <property name="singleStep">
+                <number>100</number>
+               </property>
+               <property name="value">
+                <number>400</number>
+               </property>
+              </widget>
              </item>
              <item row="5" column="1">
               <widget class="QPushButton" name="measure2pushButton">
