--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1200</width>
-    <height>871</height>
+    <height>893</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -107,7 +107,7 @@
          </size>
         </property>
         <property name="currentIndex">
-         <number>0</number>
+         <number>1</number>
         </property>
         <widget class="QWidget" name="tab">
          <attribute name="title">
@@ -394,9 +394,15 @@
           </item>
           <item row="7" column="1">
            <widget class="QGroupBox" name="groupBox_5">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="minimumSize">
              <size>
-              <width>650</width>
+              <width>320</width>
               <height>200</height>
              </size>
             </property>
@@ -508,8 +514,14 @@
                <x>70</x>
                <y>40</y>
                <width>71</width>
-               <height>20</height>
+               <height>22</height>
               </rect>
+             </property>
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
              </property>
              <property name="minimumSize">
               <size>
@@ -820,7 +832,7 @@
           <item row="8" column="7">
            <widget class="QPushButton" name="pauseButton">
             <property name="enabled">
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
             <property name="text">
              <string>Пауза</string>
@@ -1022,6 +1034,9 @@
           </item>
           <item row="8" column="3">
            <widget class="QPushButton" name="scanPushButton">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="text">
              <string>Начать</string>
             </property>
@@ -1101,8 +1116,17 @@
           </item>
           <item row="7" column="7">
            <widget class="QPushButton" name="measureBButton">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="text">
              <string>Получить координаты</string>
+            </property>
+            <property name="default">
+             <bool>false</bool>
+            </property>
+            <property name="flat">
+             <bool>false</bool>
             </property>
            </widget>
           </item>
